Магазин - верстка полностью

--- a/src/style.css
+++ b/src/style.css
@@ -695,7 +695,7 @@ header {
     padding-top: 4px; } }
 
 /*Modal - Zayavka - end*/
-/* FOOTER - start */
+/* -------------------------   SECTION START - FOOTER - start -------------------------- */
 footer {
   padding: 70px 0 50px 0; }
   footer .footer-main {
@@ -727,7 +727,6 @@ footer {
       footer .footer-line {
         margin-top: 50px; } }
 
-/* FOOTER - end */
 /*---------------------------   COMMON STYLES START------------------------------------------ */
 .section-header {
   text-transform: uppercase;
@@ -749,6 +748,62 @@ footer {
     right: 12px;
     z-index: 1;
     top: 9px; }
+
+.room-zakaz {
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: flex-end;
+  width: 270px;
+  height: 240px;
+  padding: 20px;
+  font-size: 20px; }
+
+.room-zakaz-big {
+  width: 392px;
+  height: 500px;
+  background-image: url("images/zakaz1.png");
+  padding: 25px 30px;
+  margin-right: 20px; }
+
+.zakaz-body h4 {
+  color: #fff;
+  margin-bottom: 10px;
+  font-size: 24px;
+  font-weight: 600; }
+
+.room-zakaz-1 {
+  background-image: url("images/zakaz2.png");
+  margin-right: 20px;
+  margin-bottom: 20px; }
+
+.room-zakaz-2 {
+  background-image: url("images/zakaz3.png");
+  margin-bottom: 20px; }
+
+.room-zakaz-3 {
+  background-image: url("images/zakaz4.png");
+  margin-right: 20px; }
+
+.room-zakaz-4 {
+  background-image: url("images/zakaz5.png"); }
+
+.room-zakaz-other {
+  width: 560px; }
+
+@media (max-width: 767px) {
+  .room-zakaz {
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    margin-bottom: 15px;
+    margin-right: 0;
+    height: 295px; }
+  .room-zakaz-big {
+    margin-right: 0;
+    height: 422px; }
+  .room-zakaz-other {
+    width: auto; } }
 
 /*---------------------------  COMMON STYLES END ------------------------------------------- */
 /* -------------------------   SECTION START - Bud v kurse -------------------------- */
@@ -843,59 +898,13 @@ footer {
   padding: 150px 0; }
   .sec-mebel-na-zakaz .section-header {
     margin-bottom: 40px; }
-  .sec-mebel-na-zakaz .room-zakaz {
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: flex-end;
-    width: 270px;
-    height: 240px;
-    padding: 20px;
-    font-size: 20px; }
-  .sec-mebel-na-zakaz .room-zakaz-big {
-    width: 392px;
-    height: 500px;
-    background-image: url("images/zakaz1.png");
-    padding: 25px 30px;
-    margin-right: 20px; }
-  .sec-mebel-na-zakaz .zakaz-body h4 {
-    color: #fff;
-    margin-bottom: 10px;
-    font-size: 24px;
-    font-weight: 600; }
-  .sec-mebel-na-zakaz .room-zakaz-1 {
-    background-image: url("images/zakaz2.png");
-    margin-right: 20px;
-    margin-bottom: 20px; }
-  .sec-mebel-na-zakaz .room-zakaz-2 {
-    background-image: url("images/zakaz3.png");
-    margin-bottom: 20px; }
-  .sec-mebel-na-zakaz .room-zakaz-3 {
-    background-image: url("images/zakaz4.png");
-    margin-right: 20px; }
-  .sec-mebel-na-zakaz .room-zakaz-4 {
-    background-image: url("images/zakaz5.png"); }
-  .sec-mebel-na-zakaz .room-zakaz-other {
-    width: 560px; }
   @media (max-width: 767px) {
     .sec-mebel-na-zakaz {
       padding-top: 90px;
       padding-bottom: 90px; }
       .sec-mebel-na-zakaz .section-header {
         font-size: 18px;
-        margin-bottom: 30px; }
-      .sec-mebel-na-zakaz .room-zakaz {
-        width: 100%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: bottom;
-        margin-bottom: 15px;
-        margin-right: 0;
-        height: 295px; }
-      .sec-mebel-na-zakaz .room-zakaz-big {
-        margin-right: 0;
-        height: 422px; }
-      .sec-mebel-na-zakaz .room-zakaz-other {
-        width: auto; } }
+        margin-bottom: 30px; } }
 
 /* ----------------------------   SECTION - MAIN SLIDER ------------------------------- */
 .sec-main-slider {
@@ -947,3 +956,39 @@ footer {
         margin-bottom: 50px; }
         .sec-main-slider .main-slider-block img {
           width: 100%; } }
+
+/* ----------------------------   SECTION - MAIN MAGAZIN ------------------------------- */
+.sec-main-magazin {
+  padding: 40px 0 120px 0; }
+  .sec-main-magazin .breadcrumb {
+    font-weight: 500;
+    font-size: 14px;
+    padding: 0;
+    background-color: #fff;
+    margin-bottom: 45px; }
+    .sec-main-magazin .breadcrumb .breadcrumb-item {
+      padding-left: 14px; }
+      .sec-main-magazin .breadcrumb .breadcrumb-item.active {
+        color: #C4C4C4; }
+      .sec-main-magazin .breadcrumb .breadcrumb-item.breadcrumb-first-item:before {
+        content: none; }
+      .sec-main-magazin .breadcrumb .breadcrumb-item a {
+        color: #FA8B00; }
+      .sec-main-magazin .breadcrumb .breadcrumb-item:before {
+        color: #FA8B00;
+        content: ">";
+        padding-right: 14px; }
+  .sec-main-magazin .room-zakaz:nth-child(1) {
+    background-image: url("images/magazin2.png");
+    margin-right: 40px; }
+  .sec-main-magazin .room-zakaz:nth-child(2) {
+    background-image: url("images/magazin1.png");
+    margin-right: 0; }
+  @media (max-width: 767px) {
+    .sec-main-magazin {
+      padding: 30px 0 60px 0; }
+      .sec-main-magazin .breadcrumb {
+        margin-bottom: 40px; }
+      .sec-main-magazin .room-zakaz {
+        margin-bottom: 30px;
+        margin-right: 0; } }
