--- a/src/style.css
+++ b/src/style.css
@@ -1060,3 +1060,48 @@ footer {
         margin-bottom: 60px;
         font-size: 18px;
         font-weight: bold; } }
+
+/* ----------------------------   SECTION - Magazin Category ------------------------------- */
+.sec-magazin-category {
+  padding-top: 40px;
+  padding-bottom: 90px; }
+  .sec-magazin-category .container {
+    padding: 0; }
+  .sec-magazin-category .breadcrumb-custom {
+    background-color: #FAFAFA; }
+  .sec-magazin-category .row .col-md-3 {
+    padding: 0 13px; }
+  .sec-magazin-category .card {
+    padding: 12px;
+    padding-bottom: 0;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.03);
+    border-radius: 20px;
+    margin-bottom: 30px; }
+    .sec-magazin-category .card .card-img {
+      width: 100%; }
+    .sec-magazin-category .card .card-title {
+      margin: 10px 0;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 22px; }
+    .sec-magazin-category .card .card-footer {
+      margin-top: 20px;
+      background-color: #fff;
+      text-align: center;
+      padding: 20px 0; }
+      .sec-magazin-category .card .card-footer p {
+        color: #FA8B00;
+        font-size: 24px; }
+  @media (max-width: 767px) {
+    .sec-magazin-category {
+      padding-top: 30px; }
+      .sec-magazin-category .container {
+        padding: 0 15px; }
+      .sec-magazin-category .breadcrumb-custom {
+        margin-bottom: 40px; }
+      .sec-magazin-category .row .col-md-3 {
+        padding: 0 15px;
+        display: flex;
+        justify-content: center; }
+      .sec-magazin-category .card {
+        width: min-content; } }
